syntax = "proto3";

option go_package = "github.com/SinaHo/email-marketing-backend/api/v1/proto;proto";

package proto;



message RegisterRequest{
    string email = 1;
    enum Language {
        EN = 0;
        FA = 1;
    }
    Language lang = 2;
    string password = 3;
    int32 referrerCode = 4;
}


message RegisterResponse{
    string id =1;
    string referralCode=2;
    string jwtToken=3;
}


message LoginRequest {
    string email =1;
    string password =2;
}

message loginResponse {
    string jwtCode = 1;
}



service Authentication {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (loginResponse);
  }